--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,26 @@ requests==2.26.0
 selenium==3.141.0
 sqlparse==0.4.1
 urllib3==1.26.6
+asgiref==3.4.1
+attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.3
+Django==3.2.5
+django-cors-headers==3.7.0
+django-filter==2.4.0
+djangorestframework==3.12.4
+idna==3.2
+iniconfig==1.1.1
+Markdown==3.3.4
+packaging==21.0
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+pytz==2021.1
+requests==2.26.0
+selenium==3.141.0
+sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.6
+psycopg2-binary~=2.9.1
